--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ div.menu .menu-item.tile.tile-centered {
   z-index: inherit;
   transform: none;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: flex-start;
   width: 100%;
   min-height: 60px;
 }
